src/app/edit-channel/edit-channel.component.scss
@import "../../styles.scss";

.container {
  width: 872px;
  height: 625px;
  background-color: white;
  position: fixed;
  transform: translate(-50%, -50%);
  border-radius: 30px;
  @include scrollbar();
}

.headlineAndCloseBtn {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 792px;
  height: 40px;
  justify-content: space-between;
  margin-left: 40px;
  margin-top: 40px;

  span {
    font-weight: 700;
    font-size: 24px;
    word-spacing: 15px;
  }
}

.channelName {
  position: relative;
  display: flex;
  justify-content: space-between;

  div {
    display: flex;
    flex-direction: column;
    gap: 22px;
  }

  span:nth-child(1) {
    font-weight: 700;
    font-size: 18px;
  }

  span:nth-child(2) {
    font-weight: 400;
    font-size: 18px;
  }

  button {
    font-size: 18px;
    font-weight: 600px;
    color: rgba(83, 90, 241, 1);
    cursor: pointer;

    img {
      width: 30px;
      height: 30px;
    }

    &:hover:enabled {
      color: $purple-blue-bright !important;
      font-weight: 650 !important;
    }

    &:disabled {
      cursor: not-allowed;
      color: $grey;
    }
  }
}

.description {
  width: 90px;
  height: 25px;
  margin-left: -90px;

  button {
    margin-left: -10px;
  }
}

.explain {
  width: 792px;
  height: 273px;
  margin-left: 40px;
  margin-top: 20px;
  border: 1px solid rgba(173, 176, 217, 1);
  border-radius: 20px;
  padding: 20px;

  .line {
    position: absolute;
    top: 110px;
    width: 100%;
    height: 1px;
    border: 1px solid rgba(173, 176, 217, 1);
    margin-top: 10px;
  }

  input {
    border: 1px solid rgba(173, 176, 217, 1);
    border-radius: 30px;
    padding: 15px 20px;
    height: 60px;
    font-size: 18px;
    font-weight: 400;
    width: 100%;

    &:hover,
    &:focus {
      border: 1px solid rgba(83, 90, 241, 1);
    }
  }
}

.close-thread-btn {
  color: rgb(0, 0, 0, 1);
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 8px 8px;

  &:hover {
    color: $purple-blue-bright;
    background-color: $violet-bright;
    border-radius: 20px;
  }
}

.explainChannel {
  width: 792px;
  margin-left: 40px;
  margin-top: 20px;
  border: 1px solid rgba(173, 176, 217, 1);
  border-radius: 20px;
  padding: 20px;

  input {
    border: 1px solid rgba(173, 176, 217, 1);
    border-radius: 30px;
    padding: 15px 20px;
    height: 60px;
    font-size: 18px;
    font-weight: 400;
    width: 100%;
    margin-top: 20px;

    &:hover,
    &:focus {
      border: 1px solid rgba(83, 90, 241, 1);
    }
  }
}

.members-list-container {
  width: 792px;
  display: flex;
  flex-direction: column;
  gap: 15px;
  margin-left: 40px;
  margin-top: 20px;
  border: 1px solid rgba(173, 176, 217, 1);
  border-radius: 20px;
  padding: 20px;

  .members-list {
    list-style: none;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    gap: 13px;

    .member {
      width: 306px;
      display: flex;
      align-items: center;
      gap: 15px;
      cursor: pointer;

      img {
        width: 50px;
        height: 50px;
        border-radius: 30px;
      }

      &:hover {
        color: $purple-blue-bright !important;
        background-color: $violet-bright;
        border-radius: 100px;
      }
    }
  }

  .members-list-btn {
    width: 282px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 15px;
    font-size: 18px;
    font-weight: 400;
    cursor: pointer;

    span {
      width: 40px;
      height: 40px;
      background-color: #eceefe;
      border-radius: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
    }

    &:hover {
      color: $purple-blue-bright !important;
      background-color: $violet-bright;
      border-radius: 100px;
      font-weight: 650 !important;
    }
  }
}


.createdBy {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-top: 60px;
  gap: 10px;

  span {
    margin-top: 10px;
  }

  span:nth-child(1) {
    font-weight: 700;
    font-size: 18px;
  }

  span:nth-child(2) {
    font-weight: 400;
    font-size: 24px;
    color: rgba(83, 90, 241, 1);
  }

  .logo {
    height: 32px;
    margin-left: 1%;
  }
}

.addChannelBtn {
  margin: 45px 0 30px 628px;

  button {
    margin-bottom: 25px;
  }
}

.editChannelName {
  margin-left: -20px;
  position: relative;

  span {
    font-weight: 400;
    font-size: 18px;
    word-spacing: 10px;
  }
}

.no-border {
  border: none;

}

.width {
  margin-left: -20px;
  width: 100%;
  margin-top: -30px;
  align-items: center;
  transition: 100ms ease-in;

}

.titleText {
  width: 100%;
  margin-top: 20px;
  transition: 100ms ease-in;

}

.mb-16 {
  margin-bottom: 16px;
}

.t-143 {
  top: 143px !important;
}

@media screen and (max-width: 890px) {
  .container {
    position: fixed;
    border-radius: unset;
    height: 100vh;
    width: 100%;
    overflow-x: auto;
  }

  .headlineAndCloseBtn {
    width: unset;
    margin-left: 20px;
    margin-right: 20px;
  }

  .explainChannel,
  .explain,
  .members-list-container {
    width: unset;
    margin: 20px;
    height: unset;

    .line {
      top: 150px;
    }
  }

  .addChannelBtn {
    margin-top: 25px;
    position: absolute;
    right: 20px;
  }

  span:nth-child(2) {
    border: 1px solid $purple-light;
    border-radius: 30px;
    padding: 20px;
  }
}

